Fixed jumping gallery when using critical css on Luma-based themes

--- a/view/frontend/web/css/critical.css
+++ b/view/frontend/web/css/critical.css
@@ -28,6 +28,7 @@
 }
 .breeze-gallery .close {
     display: none;
+    position: absolute;
 }
 .breeze-gallery .next {
     left: auto;
@@ -35,6 +36,7 @@
 }
 .breeze-gallery .controls {
     visibility: hidden;
+    position: absolute;
 }
 .breeze-gallery img {
     vertical-align: top;
